--- a/core/stylesheet/css/style.main.css
+++ b/core/stylesheet/css/style.main.css
@@ -1,71 +1,6 @@
-/*
-Main CSS
-    => Extends the default css styles
-    =>
-*/
+#navbar-main {
+    /*background-color: #55d6aa; */
+    width: auto;
+    height: 100px;
 
-/*Body - all - * */
-body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-
-/*Navbar Extends => Navbar - Navbar-default Navbar-trigger - Navbar-responsive */
-
-/*Navbar*/
-
-/*Navbar-trigger*/
-
-/*Navbar-responsive*/
-
-.Navbar {
-    overflow: hidden;
-    background-color: #333;
-}
-
-.Navbar a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-.Navbar a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-.Navbar a.active {
-    background-color: #04AA6D;
-    color: white;
-}
-
-.Navbar .icon {
-    display: none;
-}
-
-@media screen and (max-width: 600px) {
-    .Navbar a:not(:first-child) {display: none;}
-    .Navbar a.icon {
-        float: right;
-        display: block;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .Navbar.responsive {position: relative;}
-    .Navbar.responsive .icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-    .Navbar.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
 }
