--- a/core/stylesheet/css/style.about-us.css
+++ b/core/stylesheet/css/style.about-us.css
@@ -7,6 +7,8 @@
 
 }
 
+
+
 .us-section-header {
 
 }
@@ -15,11 +17,23 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    display: flex;
+    justify-content: center;
+
 }
 
 .profile-txt {
     width: 50%;
     padding-right: 20px;
+
+}
+
+.profile-txt zero {
+
+}
+
+.profile-txt one {
+    margin-left: 10px;
 }
 
 .profieele-image-label {
