--- a/core/stylesheet/css/style.nav.css
+++ b/core/stylesheet/css/style.nav.css
@@ -7,6 +7,7 @@ Implements:
     width: 101%;
     height: 80px;
     margin: -10px;
+    margin-top: -80px;
     display: flex;
     position: absolute;
     justify-content: space-between;
@@ -15,7 +16,7 @@ Implements:
 }
 
 #navlist {
-    width: 645px;
+    width: 600px;
     height: 50px;
     margin-right: 40px;
     display: flex;
