--- a/core/stylesheet/css/style.about-us.css
+++ b/core/stylesheet/css/style.about-us.css
@@ -32,11 +32,7 @@
 
 }
 
-.profile-txt one {
-    margin-left: 10px;
-}
-
-.profieele-image-label {
+.profile-image-label {
     width: 50%;
     position: relative;
     display: flex;
@@ -56,4 +52,5 @@
     text-align: center;
     font-size: 14px;
 }
+
 
